# TetCal

./: AF_lung.in  AM_lung.in  CMakeLists.txt  EyePlaque2.ele  EyePlaque2.node  IR.DRF  IR.RBMnBS  IR.dose  IR.material  IR.tgf  KRAF_020201.in  KRAM_020201.in  LensCal.cc  ODDCal.cc  Phantom_information  README.md  TetCal.cc  TetCal.files  TetCal.includes  ToDoList.txt  VoxCal.cc  areaSet.files  boxScorer.mac  dap_lib.csv  init_vis.mac  lightSample.in  odd.in  odd.mac  paediatric_odd.in  sample.in  sample_NA.in  take5.bvh  test.in  tetcal.files  vis.mac
MRCP_lungs/: MRCP_AF-newID.dose  MRCP_AF-newID.lung  MRCP_AF-newID.lungDiam  MRCP_AM-newID.lung  MRCP_AM-newID.lungDiam
dqs/: dual_quat_cu.hpp  mat3.hpp  point3.hpp  quat_cu.hpp  transfo.hpp  usage.cpp  vec3.hpp
include/: ActionInitialization.hh  DRFScorer.hh  DetectorConstruction.hh  DosimeterScorer.hh  ExternalBeam.hh  GammaPhysics.hh  GpsPrimaryGeneratorAction.hh  HadronElasticPhysicsHP.hh  ImportVoxelPhantom.hh  LungDetMessenger.hh  LungParallelDetCon.hh  NeutronHPMessenger.hh  PSEnergyDeposit.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorAction_general.hh  PrimaryGeneratorAction_gps.hh  PrimaryMessenger.hh  Run.hh  RunAction.hh  SeedParallel.hh  SourceGenerator.hh  TETActionInitialization.hh  TETDRFDose.hh  TETDetectorConstruction.hh  TETModelImport.hh  TETPSEnergyDeposit.hh  TETPSTrackLength.hh  TETParameterisation.hh  TETParameterisation_EyePlaque.hh  TETPhysicsList.hh  TETPrimaryGeneratorAction.hh  TETPrimaryMessenger.hh  TETRun.hh  TETRunAction.hh  TETSkinScorer.hh  TETSteppingAction.hh  VOXDetectorConstruction.hh  VOXModelImport.hh  VOXNestedParameterisation.hh  (+7 more)
phantoms/: 00F.dose
spectra/: CT100.spec  CT120.spec  CT140.spec  CT80.spec
src/: ActionInitialization.cc  DRFScorer.cc  DetectorConstruction.cc  DosimeterScorer.cc  ExternalBeam.cc  GammaPhysics.cc  GpsPrimaryGeneratorAction.cc  HadronElasticPhysicsHP.cc  ImportVoxelPhantom.cc  InternalBeam.cc  InternalSource.cc  LungDetMessenger.cc  LungParallelDetCon.cc  NeutronHPMessenger.cc  PSEnergyDeposit.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction_general.cc  PrimaryGeneratorAction_gps.cc  PrimaryMessenger.cc  Run.cc  RunAction.cc  SeedParallel.cc  SurfaceSource.cc  TETActionInitialization.cc  TETDRFDose.cc  TETDetectorConstruction.cc  TETModelImport.cc  TETPSEnergyDeposit.cc  TETPSTrackLength.cc  TETParameterisation.cc  TETParameterisation_EyePlaque.cc  TETPhysicsList.cc  TETPrimaryGeneratorAction.cc  TETPrimaryMessenger.cc  TETRun.cc  TETRunAction.cc  TETSkinScorer.cc  TETSteppingAction.cc  VOXDetectorConstruction.cc  (+9 more)
